--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ title-img: ![Castell Nos HRA - lost peatlands](https://drive.google.com/uc?expor
 social-network-links:
   email: "mike.shewring@gmail.com"
   github: "https://github.com/mikeshewring"
-  twitter: @mikeshewring
+  twitter: "@mikeshewring"
   rss: true
 #  reddit: yourname
 #  linkedin: daattali
