--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Ecologist and Ornithologist"
 #avatarurl: "https://sjackman.ca/about-me/"
 
 # Short description of your site
-description: This is website compiled by Mike Shewring to host code and data from the Heritage Lottery Funded Lost Peatlands of South Wales project. 
+description: I am an Ecologist and Ornithologist with interest in bird ecology, habitat restoration and renewable energy.
 # Your name to show in the footer
 author: Mike Shewring
 
