--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Name of website
 title: "@mikeshewring"
 description: "Ecologist and Ornithologist"
-#avatar: "/img/shaun-jackman-square.jpg"
+avatar: "assets/img/IMG_1981.jpg"
 #avatarurl: "https://sjackman.ca/about-me/"
 
 # Short description of your site
