--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ footer-link-col: "#404040"
 
 #navbar-img: "/assets/img/bgimage.png"
 #footer-img: "/assets/img/bgimage.png"
-page-img: "/assets/img/Picture1.jpg"
+page-img: "/assets/img/Thermal image skyline.jpg"
 
 # --- Web Statistics Section --- #
 
