--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ navbar-border-col: "#EAEAEA"
 #page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-#footer-col: "#F5F5F5"
+footer-col: "#00000000"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
