--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ navbar-links:
   About Me: "aboutme"
   Resources:
     - lost peatlands: "https://github.com/mikeshewring/lostpeatlands"
+    - European Nightjar: "https://github.com/mikeshewring/phd"
   Author's home: "https://github.com/mikeshewring"
 
 # --- Logo --- #
