--- a/_config.yml
+++ b/_config.yml
@@ -92,8 +92,8 @@ navbar-border-col: "#EAEAEA"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#00000000"
-footer-text-col: "#00000000"
-footer-link-col: "#00000000"
+footer-text-col: "#404040"
+footer-link-col: "#d9d7d7"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
